# my-landing-page

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  env.sample
src/: manage.py  pyproject.toml
src/home/models/: __init__.py  header.py  home_page.py  navigation.py  sections.py
src/home/templates/home/: header.html  home_page.html  sections.html
src/home/tests/: tests_page_home_header.py  tests_page_home_sections.py
src/mylandingpage/: wsgi.py
src/mylandingpage/settings/: base.py  dev.py
src/mylandingpage/templates/: base.html
